...
                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="87F-CG-b9C"/>
                                            <barButtonItem style="plain" id="xaU-XL-sIG">
                                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="sd8-if-EeL">
                                                    <rect key="frame" x="280" y="7" width="40" height="30"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                    <state key="normal" title="Share"/>
                                                    <connections>
                                                        <action selector="shareButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jwh-z5-WmI"/>
                                                    </connections>
                                                </button>
                                            </barButtonItem>
                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="JUK-Dj-BC0"/>
...
                                                    <rect key="frame" x="544" y="7" width="36" height="30"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" secondItem="HeS-xB-Izo" secondAttribute="height" multiplier="100:103" id="ut5-Tb-9Gi"/>
                                                    </constraints>
                                                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                    <state key="normal" title="Clear"/>
                                                    <variation key="default">
                                                        <mask key="constraints">
                                                            <exclude reference="ut5-Tb-9Gi"/>
                                                        </mask>
                                                    </variation>
                                                    <connections>
...
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R4c-60-jfi">
                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                <color key="barTintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <items>
                                    <navigationItem id="U9G-Ht-G2g">
                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="uxW-jX-7sF">
                                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                            <connections>
                                                <action selector="cancelAction:" destination="tfy-d6-ok3" id="ine-0H-Jx3"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Apply" id="wQc-cf-8rs">
                                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                            <connections>
                                                <action selector="applyAction:" destination="tfy-d6-ok3" id="MQR-Z7-cV9"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
